2020-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_xor_auto.c:
	  Fix bug #2992.

2020-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_xor_auto.c:
	  Fix bug #2989.

2020-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_from_int_subtraction_auto_xy.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_from_int_subtraction_auto_yx.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_xor_auto.c:
	  Fix bug #2990.

2020-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_2.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_2_xy.c:
	  Fix bug #2991.

2020-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/mm-pnvi-ae-udi-*:
	  Memory model tests, RFE #672.

2020-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/realloc.c:
	  Document some realloc details.

2020-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/gcc-torture-execute-strlen-4.c:
	  Fix stm8-specific aspect of bug #2987.

2020-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/valdiag/Makefile.in,
	  support/valdiag/valdiag.py,
	  support/valdiag/tests/bug-2984.c:
	  Fix bug #2984, enable valdiag tests for pdk13 and pdk14.
	* support/regression/tests/gcc-torture-execute-strlen-4.c:
	  Partially enable a test that now compiles.

2020-03-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-2817.c,
	  support/regression/tests/bug-2973.c:
	  Fix bugs #2817 and #2973, patches by Thomas.

2020-03-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/hc08/Makefile.in,
	* device/lib/s08/Makefile.in: add atomic_flag_clear.c
