@@ -1,3 +1,7 @@
+2020-04-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* sim/ucsim/z80.src/ez80.cc: change int8_t to i8_t
+
 2020-04-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c,
